--- a/css/remicon.css
+++ b/css/remicon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'remicon';
-  src:  url('../fonts/remicon.eot?mrp018');
-  src:  url('../fonts/remicon.eot?mrp018#iefix') format('embedded-opentype'),
-    url('../fonts/remicon.ttf?mrp018') format('truetype'),
-    url('../fonts/remicon.woff?mrp018') format('woff'),
-    url('../fonts/remicon.svg?mrp018#remicon') format('svg');
+  src:  url('../fonts/remicon.eot?titel4');
+  src:  url('../fonts/remicon.eot?titel4#iefix') format('embedded-opentype'),
+    url('../fonts/remicon.ttf?titel4') format('truetype'),
+    url('../fonts/remicon.woff?titel4') format('woff'),
+    url('../fonts/remicon.svg?titel4#remicon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,8 +25,21 @@
 }
 
 .icon-mail:before {
-  content: "\e901";
-}
-.icon-shopping-cart:before {
   content: "\e900";
 }
+.icon-man:before {
+  content: "\e901";
+}
+.icon-settings:before {
+  content: "\e902";
+}
+.icon-shopping-cart:before {
+  content: "\e903";
+}
+.icon-star:before {
+  content: "\e904";
+}
+.icon-user:before {
+  content: "\e905";
+}
+
